# sanskrit-morph-prakriya

./: .gitignore  LICENSE  README.md  access_dhatupatha.py  download_vidyut_data.py  explore_vidyut.py  find_config_path.py  find_data_path.py  generate_dataset.py  inspect_dhatu.py  inspect_dhatu_entry.py  inspect_dhatupatha_entry_attributes.py  inspect_entry.py  inspect_enum_members.py  inspect_pada.py  inspect_pada_tinanta.py  inspect_step.py  inspect_vyakarana.py  morphological_rendering_rl_plan.md  requirements.txt  sanskrit_morph_integration_plan.md  test_verifier.py  test_vidyut_prakriya.py  upload_dataset_to_hf.py  verifier.py
prime-rl/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  install.sh  pyproject.toml
prime-rl/.github/workflows/: release.yaml  style.yaml  tests.yaml
prime-rl/configs/inference/: debug.toml  deepscaler.toml  intellect2_qwen_distill.toml  intellect2_qwq.toml  sanskrit_morph.toml  simple_math.toml
prime-rl/configs/training/: debug.toml  deepscaler.toml  intellect2_qwen_distill.toml  intellect2_qwq.toml  sanskrit_morph.toml  simple_math.toml
prime-rl/src/zeroband/: infer.py  train.py
prime-rl/src/zeroband/inference/: config.py  envs.py  infer.py  parquet.py  pipeline.py  rewards.py  shardcast_downloader.py  toploc.py  utils.py
prime-rl/src/zeroband/training/: checkpoint.py  config.py  data.py  data_prefetch.py  envs.py  loss.py  lr_scheduler.py  mp.py  utils.py
prime-rl/src/zeroband/utils/: envs.py  http_monitor.py  logger.py  metrics.py  models.py  parquet.py  world_info.py
prime-rl/tests/: conftest.py
prime-rl/tests/integration/: conftest.py
prime-rl/tests/integration/inference/: test_debug_run.py
prime-rl/tests/integration/training/: test_debug_run.py  test_debug_run_with_rollout.py
prime-rl/tests/unit/inference/: test_config.py  (+4 more)
(+15 files in other folders)
