[project]
name = "zeroband"
version = "0.1.0"
description = "ZeroBand is a production ready codebase for decentralized training of LLM"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "torch",
    "numpy",
    "setuptools",
    "transformers>=4.51.0",
    "datasets>=3.0.0",
    "pydantic_config @ git+https://github.com/samsja/pydantic_config.git@b7becc3",
    "torchdata>=0.8.0",
    "ninja",
    "zstandard",
    "pyarrow",
    "wandb",
    "vllm>=0.8.5", # Commented out for macOS compatibility
    "jaxtyping",
    "beartype",
    "toploc>=0.1.6",
     "llmcompressor", # Commented out for macOS compatibility
    "pylatexenc>=2.10",
    "liger_kernel", # Commented out for macOS compatibility
    "google-cloud-storage",
    "shardcast >= 0.3.1",
     "prime-iroh==0.2.1", # Commented out for macOS compatibility (was: prime-iroh==0.2.1)
    "asyncio>=3.4.3",
    "aiohttp>=3.10.5",
    "pyext>=0.7",
    "setuptools",
    "vidyut == 0.2.0"
]

[project.optional-dependencies]
fa = [] # Was ["flash-attn>=2.7.4"], commented out for macOS compatibility

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true # allow direct references to git repos in dependencies

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["F", "I"]
ignore = ["F722", "F821"]

[tool.uv]
dev-dependencies = ["ruff>=0.5.0", "pre-commit>=3.0.0","pytest>=7.0.0", "faker"]
no-build-isolation-package = ["flash-attn"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as gpu (deselect with '-m \"not gpu\"')",
]
